# nashville-predators-project

./: README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/: cleaned_faceoff_data.csv  nhl_teamcodes.csv
sections/: player.py  prediction.py  team.py
utilities/: extract.py  general.py  global_setup.py  plots.py  transform.py
